test/corpus/injections.txt
================================================================================
global shebang
================================================================================
#!/usr/bin/env just

--------------------------------------------------------------------------------

(source_file
  (shebang
    (language)))

================================================================================
set shell basic
================================================================================

set shell := ["fooshell"]

--------------------------------------------------------------------------------

(source_file
  (setting
    (string
      (string_content))))

================================================================================
set shell with args
================================================================================

set shell := ['nu', '-m', 'light', '-c']

--------------------------------------------------------------------------------

(source_file
  (setting
    (string
      (string_content))
    (string
      (string_content))
    (string
      (string_content))
    (string
      (string_content))))

================================================================================
set shell still parse empty
================================================================================

set shell := []

--------------------------------------------------------------------------------

(source_file
  (setting))
