test/corpus/multiline.txt
================================================================================
trailing whitespace
================================================================================

a: # 
--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      (identifier))
    (comment)))

================================================================================
smooshed recipes
================================================================================

foo:
	echo foo
bar:
	echo bar

--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      (identifier))
    (recipe_body
      (recipe_line
        (text))))
  (recipe
    (recipe_header
      (identifier))
    (recipe_body
      (recipe_line
        (text)))))

================================================================================
statement_wrap
================================================================================

a := "foo" + \
	"bar"

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (string_content)))
      (value
        (string
          (string_content))))))

================================================================================
dependency_wrap
================================================================================

baz: foo \
	bar
	echo baz {{ a }}

--------------------------------------------------------------------------------

(source_file
  (recipe
    (recipe_header
      (identifier)
      (dependencies
        (dependency
          (identifier))
        (dependency
          (identifier))))
    (recipe_body
      (recipe_line
        (text)
        (interpolation
          (expression
            (value
              (identifier))))))))
