test/corpus/statements.txt
================================================================================
empty
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
assignment
================================================================================

foo := "abc"

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (string_content))))))

================================================================================
expression
================================================================================

foo := "abc" + 'def'

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (string_content)))
      (value
        (string
          (string_content))))))

================================================================================
paths
================================================================================

relative := "abc" / 'def'
absolute := / "abc"
combined := "foo" / bar() / baz

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (expression
      (value
        (string
          (string_content)))
      (value
        (string
          (string_content)))))
  (assignment
    (identifier)
    (expression
      (value
        (string
          (string_content)))))
  (assignment
    (identifier)
    (expression
      (value
        (string
          (string_content)))
      (value
        (function_call
          (identifier)))
      (value
        (identifier)))))

================================================================================
if
================================================================================

foo := if bar == baz { qux } else { quux }

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (expression
      (if_expression
        (condition
          (expression
            (value
              (identifier)))
          (expression
            (value
              (identifier))))
        (expression
          (value
            (identifier)))
        (else_clause
          (expression
            (value
              (identifier))))))))

================================================================================
else if
================================================================================

foo := if a == "x" {
  "val"
} else if "1" != "2" {
  foo_fn("val")
} else if "3" == "4" {
  if some_bool { val }
} else { val }

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (expression
      (if_expression
        (condition
          (expression
            (value
              (identifier)))
          (expression
            (value
              (string
                (string_content)))))
        (expression
          (value
            (string
              (string_content))))
        (else_if_clause
          (condition
            (expression
              (value
                (string
                  (string_content))))
            (expression
              (value
                (string
                  (string_content)))))
          (expression
            (value
              (function_call
                (identifier)
                (sequence
                  (expression
                    (value
                      (string
                        (string_content)))))))))
        (else_if_clause
          (condition
            (expression
              (value
                (string
                  (string_content))))
            (expression
              (value
                (string
                  (string_content)))))
          (expression
            (if_expression
              (condition
                (expression
                  (value
                    (identifier))))
              (expression
                (value
                  (identifier))))))
        (else_clause
          (expression
            (value
              (identifier))))))))

================================================================================
function
================================================================================

foo := some_fn("param1", param2)

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (expression
      (value
        (function_call
          (identifier)
          (sequence
            (expression
              (value
                (string
                  (string_content))))
            (expression
              (value
                (identifier)))))))))

================================================================================
export
================================================================================

export foo := "abc"

--------------------------------------------------------------------------------

(source_file
  (export
    (assignment
      (identifier)
      (expression
        (value
          (string
            (string_content)))))))

================================================================================
import
================================================================================

import 'foo/bar.just'
import? 'baz.just'

--------------------------------------------------------------------------------

(source_file
  (import
    (string
      (string_content)))
  (import
    (string
      (string_content))))

================================================================================
modules
================================================================================

mod foo
mod bar 'PATH'
mod? baz
mod? qux "PATH"

--------------------------------------------------------------------------------

(source_file
  (module
    (identifier))
  (module
    (identifier)
    (string
      (string_content)))
  (module
    (identifier))
  (module
    (identifier)
    (string
      (string_content))))

================================================================================
set
================================================================================

set SOME_BOOL
set FOO := true
set dotenv-load
set tempdir := "/tmp/just"
set shell := ["powershell.exe", "-c"]

--------------------------------------------------------------------------------

(source_file
  (setting
    (identifier))
  (setting
    (identifier)
    (boolean))
  (setting
    (identifier))
  (setting
    (identifier)
    (string
      (string_content)))
  (setting
    (string
      (string_content))
    (string
      (string_content))))

================================================================================
comment
================================================================================

# comment
foo := bar # + baz

--------------------------------------------------------------------------------

(source_file
  (comment)
  (assignment
    (identifier)
    (expression
      (value
        (identifier)))
    (comment)))

================================================================================
shebang
================================================================================

#!/usr/bin/env just

foo:
  body

--------------------------------------------------------------------------------
